--- a/index.html
+++ b/index.html
@@ -29,48 +29,25 @@
       <div>
         <h1>HCI BASICS</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa facere,
-          consequatur sapiente minus aliquam velit deleniti est veniam
-          laboriosam, accusantium tempore. Est et facilis beatae neque alias
-          odio aperiam deserunt. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Provident molestias, reiciendis iste ex cupiditate
-          consectetur aut nam, porro illo maiores suscipit! Pariatur, molestias
-          blanditiis illo iusto atque quod aliquid nulla. Lorem ipsum dolor sit
-          amet consectetur adipisicing elit. Autem nam, beatae earum alias
-          incidunt quas natus deleniti, dolores vitae exercitationem vel facilis
-          necessitatibus sapiente rerum, saepe fugit nulla voluptate architecto!
+          Human-Computer Interaction (HCI) is a multidisciplinary field focusing on the design, evaluation, and implementation of interactive computing systems for human use. It encompasses understanding the user's needs, capabilities, and preferences to create intuitive and efficient interfaces. HCI involves a range of disciplines, including computer science, psychology, design, and ergonomics.
+          At its core, HCI aims to enhance the interaction between humans and computers by studying how people use technology and designing interfaces that accommodate their cognitive abilities and behaviors. This involves principles such as usability, accessibility, and user experience (UX) design.
         </p>
         <div class="button-container"><button>Read More</button></div>
       </div>
       <div>
         <h1>The Paradigms</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa facere,
-          consequatur sapiente minus aliquam velit deleniti est veniam
-          laboriosam, accusantium tempore. Est et facilis beatae neque alias
-          odio aperiam deserunt. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Provident molestias, reiciendis iste ex cupiditate
-          consectetur aut nam, porro illo maiores suscipit! Pariatur, molestias
-          blanditiis illo iusto atque quod aliquid nulla. Lorem ipsum dolor sit
-          amet consectetur adipisicing elit. Autem nam, beatae earum alias
-          incidunt quas natus deleniti, dolores vitae exercitationem vel facilis
-          necessitatibus sapiente rerum, saepe fugit nulla voluptate architecto!
+          HCI paradigms have evolved over time, from early command-line interfaces to graphical user interfaces (GUIs), which introduced visual metaphors like icons and windows to represent digital objects. The rise of mobile computing brought touch-based interactions, gestures, and responsive design, enabling intuitive interactions on smaller screens.Further advancements in HCI include natural language processing, augmented reality (AR), virtual reality (VR), and tangible interfaces. These paradigms aim to make interactions more intuitive, immersive, and context-aware. For example, voice-controlled assistants like Siri and Alexa leverage natural language processing to enable hands-free interaction, while AR and VR technologies offer immersive experiences in various domains, from gaming to education and healthcare.
+
         </p>
         <div class="button-container"><button>Read More</button></div>
       </div>
       <div>
         <h1>The Future</h1>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa facere,
-          consequatur sapiente minus aliquam velit deleniti est veniam
-          laboriosam, accusantium tempore. Est et facilis beatae neque alias
-          odio aperiam deserunt. Lorem ipsum dolor sit amet consectetur
-          adipisicing elit. Provident molestias, reiciendis iste ex cupiditate
-          consectetur aut nam, porro illo maiores suscipit! Pariatur, molestias
-          blanditiis illo iusto atque quod aliquid nulla. Lorem ipsum dolor sit
-          amet consectetur adipisicing elit. Autem nam, beatae earum alias
-          incidunt quas natus deleniti, dolores vitae exercitationem vel facilis
-          necessitatibus sapiente rerum, saepe fugit nulla voluptate architecto!
+          The future of HCI holds promising opportunities driven by emerging technologies such as artificial intelligence (AI), machine learning (ML), and ubiquitous computing. AI-powered interfaces can adapt and personalize user experiences based on individual preferences and behaviors, leading to more efficient and enjoyable interactions. Ubiquitous computing envisions seamless integration of digital technology into everyday objects and environments, blurring the lines between physical and digital realms.
+          Moreover, HCI is increasingly focusing on inclusive design, aiming to create interfaces that cater to diverse user needs, including those with disabilities. As technology continues to advance, HCI will play a crucial role in shaping how humans interact with digital systems, with a focus on enhancing usability, accessibility, and overall user satisfaction.
+
         </p>
         <div class="button-container"><button>Read More</button></div>
       </div>
